[tool.poetry]
name = "TBD"
version = "0.1.0"
description = ""
authors = ["Igor <igorlfs@ufmg.br>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.20.0"
pysubgroup = "^0.8.0"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
