[tool.poetry]
name = "TBD"
version = "0.1.0"
description = ""
authors = ["Igor <igorlfs@ufmg.br>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.20.0"
pysubgroup = "^0.8.0"
scikit-learn = "^1.4.1.post1"
dash = "^2.16.1"
tqdm = "^4.66.2"
ipykernel = "^6.29.4"
pytest = "^8.1.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.ruff]
exclude = ["./src/grouping/lib.py"]
[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "ANN",
    "S",
    "B",
    "A",
    "C4",
    "EM",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TCH",
    "PTH",
    "ARG",
    "PD",
    "PL",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = [
    "E501",  # Line too long
    "S101",  # Use of assert
    "PD008", # Pands loc vs at
]
[tool.ruff.lint.pylint]
max-args = 6
